# evennia

./: .dockerignore  .gitignore  .hgignore  .release.sh  .remote-sync.json  .travis.yml  ABOUT  AGENTS.md  CHANGELOG.md  CHANGELOG.txt  CNAME  CODE_OF_CONDUCT.md  CODING_STYLE  CODING_STYLE.md  CONTRIBUTING.md  Dockerfile  INSTALL  INSTALL.md  INSTALL.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.txt  SECURITY.md  TODO  Untitled-1.ipynb  VERSION  VERSION.txt  __init__.py  ansi.py  api test.ipynb  cmdhandler.py  cmdtable.py  commands_comsys.py  commands_general.py  commands_privileged.py  commands_unloggedin.py  (+34 more)
.agents/docs/: architecture.md  ci.md  code-style.md  commands.md  core-beliefs.md  github.md  testing.md
.agents/skills/: README.md
.agents/tools/: clean_rot.py
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report-develop.md  bug-report.md  bug_report.md  config.yaml  documentation-issue.md  feature-request.md  typing.yml
.github/actions/: setup-database.yml
.github/workflows/: codacy-coverage-reporter.yml  codeql-analysis.yml  github_action_base_workflow.yml  github_action_build_docs.yml  github_action_issue_to_project.yml  github_action_publish_to_pypi.yml  github_action_pypy_test_suite.yml  github_action_test_suite.yml  github_evennia_action.yml  mysql.cnf  mysql_options.cnf  mysql_settings.py  postgresql_settings.py  pythonpackage.yml  sqlite3_settings.py
.travis/: my.conf  mysql_settings.py  postgresql_settings.py  testing_settings.py
apps/config/: models.py
apps/genperms/: models.py
apps/helpsys/: models.py
apps/news/: models.py  urls.py  views.py
apps/objects/: exceptions.py  models.py
apps/website/: urls.py  views.py  webcontext.py
commands/: comsys.py  general.py  info.py  objmanip.py  privileged.py  unloggedin.py
contrib/: README  barter.py  chargen.py  dice.py  email-login.py  extended_room.py  lineeditor.py  menu_login.py  menusystem.py  misc_commands.py  mux-login.py  puzzle_objects.py  slow_exit.py  talking_npc.py  usable_objects.py
contrib/battle_for_evennia/: README
contrib/evlang/: README  command.py  evlang.py  examples.py  objects.py
contrib/procpools/: README.txt  python_procpool.py  python_procpool_plugin.py  python_run_async.py
contrib/red_button/: red_button.py  red_button_scripts.py
contrib/tutorial_examples/: batch_cmds.ev  cmdset_red_button.py
contrib/tutorial_world/: README  build.ev  mob.py  objects.py  rooms.py  scripts.py
devblog/: .build_blog.py.swp  2012.html  2013.html  2014.html  2015.html  2016.html  2017.html  2018.html  2019.html  2020.html  2021.html  2022.html  2023.html  build_blog.py  feed  feed.rss  images  index.html
devblog/_src/: build_blog.py  build_devblog.py
devblog/html/: devblog2012.html  devblog2013.html  devblog2014.html  devblog2015.html  devblog2016.html  devblog2017.html  devblog2018.html  devblog2019.html  devblog2020.html  devblog2021.html  devblogs_2012.html  devblogs_2013.html  devblogs_2014.html  devblogs_2015.html  devblogs_2016.html  devblogs_2017.html  devblogs_2018.html  devblogs_2019.html  devblogs_2020.html  devblogs_2021.html  index.html
devblog/source/: 2012-02-05-About-this-dev-blog.md  2012-02-05-Evennias-open-bottlenecks.md  2012-02-17-Commands-and-you.md  2012-02-22-Dummies-doing-dummy-things.md  2012-03-26-Shortcuts-to-goodness.md  2012-05-30-Dummies-doing-even-more-dummy-things.md  2012-06-11-Coding-from-the-inside.md  2012-06-26-Extending-time-and-details.md  2012-08-31-Combining-Twisted-and-Django.md  2012-10-05-Community-interest.md  2013-12-16-Imaginary-Realities-is-back.md  2014-01-24-Looking-forwards-and-backwards.md  2014-05-16-Imaginary-realities-volume6-issue-1.md  2014-06-30-Webby-stuff.md  2014-08-04-Dance-my-puppets.md  2015-01-19-Building-Django-proxies-and-MUD-libraries.md  2015-05-09-Documenting-Python-without-Sphinx.md  2015-05-11-Things-goin-on.md  2015-06-22-Announcing-the-Evennia-example-game-Ainneve.md  2015-08-27-A-wagon-load-of-post-summer-updates.md  2015-10-02-Emoting-System.md  2015-10-11-Illustrations-and-soaps.md  2015-11-12-MIT-uses-Evennia.md  2016-03-24-Technical-stuff-happening.md  2016-05-31-Evennia-in-Pictures.md  2016-07-01-The-art-of-sharing-nicks-and-descriptions.md  2016-11-30-Birthday-retrospective.md  2017-02-05-News-items-from-the-new-year.md  2017-04-23-The-luxury-of-a-creative-community.md  2017-09-20-Evennia-0.7-released.md  2017-10-01-Evennia-in-Hacktobergest-2017.md  2021-03-21-Where-do-I-begin.md  (+10 more)
docs/: .Makefile.swp  .deploy.sh.swp  .gitignore  Contributing-Docs.html  Contributing.html  Doxyfile  Evennia-API.html  Evennia-In-Pictures.html  LICENSE  LICENSE.txt  Licensing.html  Links.html  Makefile  README  README.md  README.txt  api_ref.md  auto_structify.md  broken_links.py  checkenv.sh  conf.py  config.dox  deploy.py  deploy.sh  evennia_modpy_apache.conf  evennia_wsgi_apache.conf  genindex.html  index.html  index.md  latest  py-modindex.html  requirements.txt  searchindex.js
evennia/: ABOUT  README  VERSION.txt  VERSION_REQS.txt  __init__.py  __main__.py  plugin.py  plugins.py  prepenv.sh  sessions.py  settings.py  settings_default.py
game/: evennia.py  manage.py  migrate.py  runner.py  settings.py  startup.bat  startup.py  startup.sh
javascripts/: newsfeed.js
locale/: README
recommonmark/: __init__.py  parser.py  scripts.py  states.py  transform.py
reload/: __init__.py  config.py  managers.py
remarkdown/: commonmark.py  markdown.parsley  parser.py  scripts.py
scripts/: basicobject.py  get_nltk_data.py
src/: __init__.py  alias_mgr.py  ansi.py  cache.py  cmdhandler.py  cmdtable.py  comsys.py  config_defaults.py  defines_global.py  events.py  exceptions_generic.py  flags.py  gametime.py  initial_setup.py  locks.py  logger.py  scheduler.py  scripthandler.py  server.py  session.py  session_mgr.py  settings_default.py  statetable.py
stylesheets/: styles.css
tests/: test_basic.py  test_sphinx.py
tools/: mux_help_importer.py
trunk/: ansi.py  cmdhandler.py  urls.py
util/: mux_help_importer.py
(+22885 files in other folders)
