[build-system]
requires = ["setuptools>40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__" 

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
exclude = '''

  (
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
    | migrations
    | docs 
     
  )
'''
